fix: 用户角色变化强制用户退出