@@ -3,69 +3,81 @@ package com.youlai.boot.system.service.impl;
 import cn.hutool.core.collection.CollectionUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.youlai.boot.core.security.token.TokenManager;
+import com.youlai.boot.core.security.util.SecurityUtils;
 import com.youlai.boot.system.mapper.UserRoleMapper;
 import com.youlai.boot.system.model.entity.UserRole;
 import com.youlai.boot.system.service.UserRoleService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class UserRoleServiceImpl extends ServiceImpl<UserRoleMapper, UserRole> implements UserRoleService {
+
+
+    private final TokenManager tokenManager;
 
     /**
      * 保存用户角色
      *
-     * @param userId
-     * @param roleIds
+     * @param userId 用户ID
+     * @param roleIds 选择的角色ID集合
      * @return
      */
     @Override
-    public boolean saveUserRoles(Long userId, List<Long> roleIds) {
-
+    public void saveUserRoles(Long userId, List<Long> roleIds) {
         if (userId == null || CollectionUtil.isEmpty(roleIds)) {
-            return false;
+            return ;
         }
 
-        // 用户原角色ID集合
+        // 获取现有角色
         List<Long> userRoleIds = this.list(new LambdaQueryWrapper<UserRole>()
+                        .select(UserRole::getRoleId)
                         .eq(UserRole::getUserId, userId))
-                .stream()
+                .parallelStream()
                 .map(UserRole::getRoleId)
-                .collect(Collectors.toList());
+                .toList();
 
-        // 新增用户角色
-        List<Long> saveRoleIds;
-        if (CollectionUtil.isEmpty(userRoleIds)) {
-            saveRoleIds = roleIds;
-        } else {
-            saveRoleIds = roleIds.stream()
-                    .filter(roleId -> !userRoleIds.contains(roleId))
-                    .collect(Collectors.toList());
+        // 使用Set提升对比效率
+        Set<Long> oldRoles = new HashSet<>(userRoleIds);
+        Set<Long> newRoles = new HashSet<>(roleIds);
+
+        // 计算变更集
+        Set<Long> addedRoles = new HashSet<>(newRoles);
+        addedRoles.removeAll(oldRoles);
+
+        Set<Long> removedRoles = new HashSet<>(oldRoles);
+        removedRoles.removeAll(newRoles);
+
+        boolean rolesChanged = !addedRoles.isEmpty() || !removedRoles.isEmpty();
+
+        // 批量保存新增角色
+        if (!addedRoles.isEmpty()) {
+            this.saveBatch(addedRoles.stream()
+                    .map(roleId -> new UserRole(userId, roleId))
+                    .collect(Collectors.toList()));
         }
 
-        List<UserRole> saveUserRoles = saveRoleIds
-                .stream()
-                .map(roleId -> new UserRole(userId, roleId))
-                .collect(Collectors.toList());
-        this.saveBatch(saveUserRoles);
-
-        // 删除用户角色
-        if (CollectionUtil.isNotEmpty(userRoleIds)) {
-            List<Long> removeRoleIds = userRoleIds.stream()
-                    .filter(roleId -> !roleIds.contains(roleId))
-                    .collect(Collectors.toList());
-
-            if (CollectionUtil.isNotEmpty(removeRoleIds)) {
-                this.remove(new LambdaQueryWrapper<UserRole>()
-                        .eq(UserRole::getUserId, userId)
-                        .in(UserRole::getRoleId, removeRoleIds)
-                );
-            }
+        // 删除废弃角色
+        if (!removedRoles.isEmpty()) {
+            this.remove(new LambdaQueryWrapper<UserRole>()
+                    .eq(UserRole::getUserId, userId)
+                    .in(UserRole::getRoleId, removedRoles));
         }
-        return true;
 
+        // 当权限变更时清除登录态
+        if (rolesChanged) {
+            // 获取用户所有有效token（根据实际token存储实现）
+            String accessToken = SecurityUtils.getTokenFromRequest();
+            tokenManager.invalidateToken(accessToken);
+        }
     }
 
     /**
